--- a/ClubCloud.Model/BeheerClubCloud.Context.tt
+++ b/ClubCloud.Model/BeheerClubCloud.Context.tt
@@ -76,13 +76,18 @@ using System.Linq;
 		if (!loader.IsLazyLoadingEnabled(container))
 		{
 		#>
+	
 		this.Configuration.LazyLoadingEnabled = false;
-		this.Configuration.AutoDetectChangesEnabled = true;
-		this.Configuration.UseDatabaseNullSemantics = false;
-		this.Configuration.ValidateOnSaveEnabled = false;
+
 		<#
 		}
+		#>
 
+		this.Configuration.AutoDetectChangesEnabled = true;
+		this.Configuration.UseDatabaseNullSemantics = false;
+		this.Configuration.ValidateOnSaveEnabled = true;
+
+		<#
 		foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
 		{
 			// Note: the DbSet members are defined below such that the getter and
@@ -95,6 +100,7 @@ using System.Linq;
 			}
 		}
 		#>
+		
 		this.Configuration.ProxyCreationEnabled = proxyCreationEnabled;
 
 		if (!Database.Exists(NameOrConnectionString))
@@ -123,18 +129,23 @@ using System.Linq;
     public <#=code.Escape(container)#>(string connectionString, bool proxyCreationEnabled)
         : base(connectionString)
     {
-			NameOrConnectionString = connectionString;
+		NameOrConnectionString = connectionString;
 		<#
 		if (!loader.IsLazyLoadingEnabled(container))
 		{
 		#>
+
 		this.Configuration.LazyLoadingEnabled = false;
-		this.Configuration.AutoDetectChangesEnabled = true;
-		this.Configuration.UseDatabaseNullSemantics = false;
-		this.Configuration.ValidateOnSaveEnabled = false;
+
 		<#
 		}
+		#>
 
+		this.Configuration.AutoDetectChangesEnabled = true;
+		this.Configuration.UseDatabaseNullSemantics = false;
+		this.Configuration.ValidateOnSaveEnabled = true;
+
+		<#
 		foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
 		{
 			// Note: the DbSet members are defined below such that the getter and
@@ -147,6 +158,7 @@ using System.Linq;
 			}
 		}
 		#>
+
         this.Configuration.ProxyCreationEnabled = proxyCreationEnabled;
 
 		if (!Database.Exists(NameOrConnectionString))
@@ -219,10 +231,18 @@ using System.Linq;
                             //entry.Reload();
                             break;
                         default:
-                            entry.Reload();
+                            //entry.Reload();
                             break;
                     }
                 }
+            }
+            catch (System.Data.Entity.Core.EntityException eex)
+            {
+                string message = eex.Message;
+            }
+            catch (Exception ex)
+            {
+                string message = ex.Message;
             }
         }
         while (!saved);
