--- a/ClubCloud.Model/BoekhoudingClubCloud.Context.tt
+++ b/ClubCloud.Model/BoekhoudingClubCloud.Context.tt
@@ -41,11 +41,14 @@ namespace <#=code.EscapeNamespace(codeNamespace)#>
 
 #>
 using System;
-using System.Data.Entity.Core.Objects;
-using System.Data.Entity;
-using System.Data.Entity.Infrastructure;
-using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
+using System.Data.Entity;
+using System.Data.Entity.Core;
+using System.Data.Entity.Core.Objects;
+using System.Data.Entity.Infrastructure;
+using System.Data.Entity.ModelConfiguration.Conventions;
+using System.Data.Entity.Validation;
+using System.Diagnostics;
 <#
 if (container.FunctionImports.Any())
 {
@@ -178,8 +181,145 @@ using System.Linq;
       get { return ((IObjectContextAdapter)this).ObjectContext; }
     }
 
+	public override int SaveChanges()
+    {
+		int count = 0;
+        bool saved = false;
+		Stopwatch s = new Stopwatch();
+        s.Start();
+
+        do
+        {
+            try
+            {
+                count = base.SaveChanges();
+                saved = true;
+            }
+			//A database command did not affect the expected number of rows. This usually indicates an optimistic concurrency violation; that is, a row has been changed in the database since it was queried.
+    		catch(DbUpdateConcurrencyException dbucex)
+    		{
+                foreach (DbEntityEntry entry in dbucex.Entries)
+                {
+                    switch (entry.State)
+                    {
+                        case EntityState.Deleted:
+                            entry.Reload();
+                            entry.State = EntityState.Deleted;
+                            break;
+                        case EntityState.Modified:
+                            DbPropertyValues currentValues = entry.CurrentValues.Clone();
+                            entry.Reload();
+                            if (entry.State == EntityState.Detached)
+                                Set(ObjectContext.GetObjectType(entry.Entity.GetType())).Add(entry.Entity);
+                            else
+                            {
+                                entry.Reload();
+                                entry.CurrentValues.SetValues(currentValues);
+                            }
+                            break;
+                        default:
+                            //entry.Reload();
+                            break;
+                    }
+                }
+    		}
+			//An error occurred sending updates to the database.
+    		catch(DbUpdateException dbuex)
+    		{
+                foreach (DbEntityEntry entry in dbuex.Entries)
+                {
+                    switch (entry.State)
+                    {
+                        case EntityState.Deleted:
+                            entry.Reload();
+                            entry.State = EntityState.Deleted;
+                            break;
+                        case EntityState.Modified:
+                            DbPropertyValues currentValues = entry.CurrentValues.Clone();
+                            entry.Reload();
+                            if (entry.State == EntityState.Detached)
+                                Set(ObjectContext.GetObjectType(entry.Entity.GetType())).Add(entry.Entity);
+                            else
+                            {
+                                entry.Reload();
+                                entry.CurrentValues.SetValues(currentValues);
+                            }
+                            break;
+                        default:
+                            //entry.Reload();
+                            break;
+                    }
+                }                    
+    		}
+			//The save was aborted because validation of entity property values failed.
+    		catch(DbEntityValidationException dbevex)
+    		{
+                foreach (DbEntityValidationResult result in dbevex.EntityValidationErrors)
+                {
+                    switch (result.Entry.State)
+                    {
+                        case EntityState.Deleted:
+                            result.Entry.Reload();
+                            result.Entry.State = EntityState.Deleted;
+                            break;
+                        case EntityState.Modified:
+                            DbPropertyValues currentValues = result.Entry.CurrentValues.Clone();
+                            result.Entry.Reload();
+                            if (result.Entry.State == EntityState.Detached)
+                                Set(ObjectContext.GetObjectType(result.Entry.Entity.GetType())).Add(result.Entry.Entity);
+                            else
+                            {
+                                result.Entry.Reload();
+                                result.Entry.CurrentValues.SetValues(currentValues);
+                            }
+                            break;
+                        default:
+                            //result.Entry.Reload();
+                            break;
+                    }
+                }
+    		}
+			//An attempt was made to use unsupported behavior such as executing multiple asynchronous commands concurrently on the same context instance.
+    		catch(NotSupportedException nsex)
+    		{
+				string message = nsex.Message;
+                //throw nsex;
+    		}
+			//The context or connection have been disposed.
+    		catch(ObjectDisposedException odex)
+    		{
+				string message = odex.Message;
+                //throw odex;
+    		}
+			//Some error occurred attempting to process entities in the context either before or after sending commands to the database.
+    		catch(InvalidOperationException ioex)
+    		{
+				string message = ioex.Message;
+                //throw ioex;
+    		}
+        	catch (EntityException eex)
+        	{
+				string message = eex.Message;
+                //throw eex;
+        	}
+
+            catch (Exception ex)
+            {
+                string message = ex.Message;
+				//throw ex;
+            }
+        }
+        while (!saved && s.Elapsed < TimeSpan.FromSeconds(30));
+        s.Stop();
+        
+		this.ObjectContext.AcceptAllChanges();
+
+        return count;
+    }
+
     protected override void OnModelCreating(DbModelBuilder modelBuilder)
     {
+		modelBuilder.Conventions.Remove<PluralizingTableNameConvention>();
 <#
 	foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
     {
