--- a/ClubCloud.Model/BeheerClubCloud.Context.tt
+++ b/ClubCloud.Model/BeheerClubCloud.Context.tt
@@ -41,16 +41,14 @@ namespace <#=code.EscapeNamespace(codeNamespace)#>
 
 #>
 using System;
+using System.ComponentModel.DataAnnotations.Schema;
+using System.Data.Entity;
 using System.Data.Entity.Core;
 using System.Data.Entity.Core.Objects;
-using System.Data.Entity;
 using System.Data.Entity.Infrastructure;
-using System.ComponentModel.DataAnnotations;
-using System.ComponentModel.DataAnnotations.Schema;
-using System.Data.Entity.Infrastructure.Interception;
+using System.Data.Entity.ModelConfiguration.Conventions;
 using System.Data.Entity.Validation;
 using System.Diagnostics;
-
 <#
 if (container.FunctionImports.Any())
 {
@@ -226,7 +224,7 @@ using System.Linq;
                             }
                             break;
                         default:
-                            entry.Reload();
+                            //entry.Reload();
                             break;
                     }
                 }
@@ -254,7 +252,7 @@ using System.Linq;
                             }
                             break;
                         default:
-                            entry.Reload();
+                            //entry.Reload();
                             break;
                     }
                 }                    
@@ -282,7 +280,7 @@ using System.Linq;
                             }
                             break;
                         default:
-                            result.Entry.Reload();
+                            //result.Entry.Reload();
                             break;
                     }
                 }
@@ -327,6 +325,7 @@ using System.Linq;
 
     protected override void OnModelCreating(DbModelBuilder modelBuilder)
     {
+		modelBuilder.Conventions.Remove<PluralizingTableNameConvention>();
 <#
 	foreach (var entitySet in container.BaseEntitySets.OfType<EntitySet>())
     {
